force-app/main/default/objects/Torc_Match__c/Torc_Match__c.object-meta.xml
<CustomObject>
    <label>Torc Match</label>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>Torc Match Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Torc Matches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>