force-app/main/default/objects/Torc_Match__c/fields/Already_Applied__c.field-meta.xml
<CustomField>
    <fullName>Already_Applied__c</fullName>
    <formula>NOT(ISNULL( Applied_At__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Already Applied?</label>
    <type>Checkbox</type>
</CustomField>