force-app/main/default/objects/Torc_Match__c/fields/Already_Matched__c.field-meta.xml
<CustomField>
    <fullName>Already_Matched__c</fullName>
    <formula>NOT(ISNULL(Match_At__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Already Matched?</label>
    <type>Checkbox</type>
</CustomField>