force-app/main/default/objects/Torc_Match__c/fields/Application_Rate__c.field-meta.xml
<CustomField>
    <fullName>Application_Rate__c</fullName>
    <formula>Torc_Application__r.Preferred_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>