force-app/main/default/objects/Torc_Match__c/fields/applicationId__c.field-meta.xml
<CustomField>
    <fullName>applicationId__c</fullName>
    <label>Application Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>