force-app/main/default/objects/Torc_Match__c/fields/Creation_Time__c.field-meta.xml
<CustomField>
    <fullName>Creation_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creation Time</label>
    <type>DateTime</type>
</CustomField>