force-app/main/default/objects/Torc_Match__c/fields/Creator_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Creator_Cohort__c</fullName>
    <formula>TEXT(Creator_Torc_User__r.Recruiter_Cohort__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creator Cohort</label>
    <type>Text</type>
</CustomField>