force-app/main/default/objects/Torc_Match__c/fields/Creator_Torc_User__c.field-meta.xml
<CustomField>
    <fullName>Creator_Torc_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creator Torc User</label>
    <referenceTo>Torc_User__c</referenceTo>
    <relationshipLabel>Torc Matches (Creator Torc User)</relationshipLabel>
    <relationshipName>Torc_Matches1</relationshipName>
    <type>Lookup</type>
</CustomField>