force-app/main/default/objects/Torc_Match__c/fields/Current_Update__c.field-meta.xml
<CustomField>
    <fullName>Current_Update__c</fullName>
    <formula>IF(Torc_Application__c &lt;&gt; NULL, Torc_Application__r.Torc_User__r.Full_Name__c, Torc_User_Ref__r.Full_Name__c) 
 +&apos; - &apos; +
 status__c +&apos; - &apos;+
 LPAD(TEXT(MONTH(DATEVALUE(updatedAt__c))),2,&apos;0&apos;)+&apos;/&apos;+
 LPAD(TEXT(DAY(DATEVALUE(updatedAt__c))),2,&apos;0&apos;)+&apos;/&apos;+
 TEXT(YEAR(DATEVALUE(updatedAt__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Update</label>
    <type>Text</type>
</CustomField>