force-app/main/default/objects/Torc_Match__c/fields/customerRate__c.field-meta.xml
<CustomField>
    <fullName>customerRate__c</fullName>
    <label>Customer Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>