force-app/main/default/objects/Torc_Match__c/fields/Date_To_Check_Source__c.field-meta.xml
<CustomField>
    <fullName>Date_To_Check_Source__c</fullName>
    <formula>IF( Torc_Job_Opportunity__r.Activated_At__c =NULL, Torc_Job_Opportunity__r.createdAt__c ,Torc_Job_Opportunity__r.Activated_At__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date To Check Source</label>
    <type>DateTime</type>
</CustomField>