force-app/main/default/objects/Torc_Match__c/fields/EOR_OR_IC__c.field-meta.xml
<CustomField>
    <fullName>EOR_OR_IC__c</fullName>
    <label>EOR OR IC?</label>
    <length>10</length>
    <type>Text</type>
</CustomField>