force-app/main/default/objects/Torc_Match__c/fields/Estimated_Margin__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Margin__c</fullName>
    <formula>IF(Member_Rate_of_the_match__c=0,NULL,
(Torc_Job_Opportunity__r.maxRate__c - Member_Rate_of_the_match__c )/ Torc_Job_Opportunity__r.maxRate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>