force-app/main/default/objects/Torc_Match__c/fields/Ever_Applied__c.field-meta.xml
<CustomField>
    <fullName>Ever_Applied__c</fullName>
    <formula>AND(Delete_From_Platform__c =FALSE,

OR( NOT(ISNULL(Applied_At__c)),
status__c =&apos;APPLIED&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ever Applied</label>
    <type>Checkbox</type>
</CustomField>