force-app/main/default/objects/Torc_Match__c/fields/External_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Job_Id__c</fullName>
    <formula>Torc_Job_Opportunity__r.externalJobId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Job Id</label>
    <type>Text</type>
</CustomField>