force-app/main/default/objects/Torc_Match__c/fields/externalMatchId__c.field-meta.xml
<CustomField>
    <fullName>externalMatchId__c</fullName>
    <externalId>true</externalId>
    <label>externalMatchId</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>