force-app/main/default/objects/Torc_Match__c/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <formula>IF(Torc_Application__c&lt;&gt;NULL, Torc_Application__r.Torc_User__r.Facebook__c,  Torc_User_Ref__r.Facebook__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facebook</label>
    <type>Text</type>
</CustomField>