force-app/main/default/objects/Torc_Match__c/fields/freelancerPitch__c.field-meta.xml
<CustomField>
    <fullName>freelancerPitch__c</fullName>
    <label>freelancerPitch</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>