force-app/main/default/objects/Torc_Match__c/fields/Full_Margin_33__c.field-meta.xml
<CustomField>
    <fullName>Full_Margin_33__c</fullName>
    <formula>IF( AND(Estimated_Margin__c &gt;=0.33,NOT(ISNULL(Estimated_Margin__c))),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Margin(33%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>