force-app/main/default/objects/Torc_Match__c/fields/Half_Margin__c.field-meta.xml
<CustomField>
    <fullName>Half_Margin__c</fullName>
    <formula>IF( AND(Estimated_Margin__c &gt;=0.16,Estimated_Margin__c &lt;0.33,NOT(ISNULL(Estimated_Margin__c))) ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Half Margin(16%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>