force-app/main/default/objects/Torc_Match__c/fields/Instagram__c.field-meta.xml
<CustomField>
    <fullName>Instagram__c</fullName>
    <formula>IF(Torc_Application__c&lt;&gt;NULL, Torc_Application__r.Torc_User__r.Instagram__c,  Torc_User_Ref__r.Instagram__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instagram</label>
    <type>Text</type>
</CustomField>