force-app/main/default/objects/Torc_Match__c/fields/Is_Sourced__c.field-meta.xml
<CustomField>
    <fullName>Is_Sourced__c</fullName>
    <formula>Date_To_Check_Source__c &lt; Torc_User_Ref__r.createdAt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Sourced?</label>
    <type>Checkbox</type>
</CustomField>