force-app/main/default/objects/Torc_Match__c/fields/Job_in_Platform__c.field-meta.xml
<CustomField>
    <fullName>Job_in_Platform__c</fullName>
    <formula>Torc_Job_Opportunity__r.Job_in_Platform__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job in Platform</label>
    <type>Text</type>
</CustomField>