force-app/main/default/objects/Torc_Match__c/fields/Job_Opportunity_Search_Tool__c.field-meta.xml
<CustomField>
    <fullName>Job_Opportunity_Search_Tool__c</fullName>
    <formula>HYPERLINK(
&apos;https://search.opentorc.com/jobOpps/&apos;+jobOpportunityId__c+&apos;/details&apos;, jobOpportunityId__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Opportunity(Search Tool)</label>
    <type>Text</type>
</CustomField>