force-app/main/default/objects/Torc_Match__c/fields/Job_Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Opportunity_Status__c</fullName>
    <formula>Torc_Job_Opportunity__r.status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Opportunity Status</label>
    <type>Text</type>
</CustomField>