force-app/main/default/objects/Torc_Match__c/fields/Linkedin__c.field-meta.xml
<CustomField>
    <fullName>Linkedin__c</fullName>
    <formula>IF(Torc_Application__c&lt;&gt;NULL, Torc_Application__r.Torc_User__r.LinkedIn__c, Torc_User_Ref__r.LinkedIn__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linkedin</label>
    <type>Text</type>
</CustomField>