force-app/main/default/objects/Torc_Match__c/fields/Match_At__c.field-meta.xml
<CustomField>
    <fullName>Match_At__c</fullName>
    <label>Match At</label>
    <type>DateTime</type>
</CustomField>