force-app/main/default/objects/Torc_Match__c/fields/matcher__c.field-meta.xml
<CustomField>
    <fullName>matcher__c</fullName>
    <label>matcher</label>
    <length>80</length>
    <type>Text</type>
</CustomField>