force-app/main/default/objects/Torc_Match__c/fields/Matcher_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Matcher_Cohort__c</fullName>
    <formula>TEXT(Matcher_Torc_User__r.Recruiter_Cohort__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matcher Cohort</label>
    <type>Text</type>
</CustomField>