force-app/main/default/objects/Torc_Match__c/fields/Matcher_Email__c.field-meta.xml
<CustomField>
    <fullName>Matcher_Email__c</fullName>
    <formula>Matcher_Torc_User__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matcher Email</label>
    <type>Text</type>
</CustomField>