force-app/main/default/objects/Torc_Match__c/fields/Matcher_Torc_User__c.field-meta.xml
<CustomField>
    <fullName>Matcher_Torc_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matcher Torc User</label>
    <referenceTo>Torc_User__c</referenceTo>
    <relationshipLabel>Torc Matches (Matcher Torc User)</relationshipLabel>
    <relationshipName>Torc_Matches2</relationshipName>
    <type>Lookup</type>
</CustomField>