force-app/main/default/objects/Torc_Match__c/fields/Member_Rate_of_the_match__c.field-meta.xml
<CustomField>
    <fullName>Member_Rate_of_the_match__c</fullName>
    <formula>if(AND(rate__c&lt;&gt;0,NOT(ISNULL(rate__c))), rate__c,


IF(Torc_Application__c&lt;&gt;NULL,

IF(AND(Torc_Application__r.Preferred_Rate__c &lt;&gt;0,NOT(ISNULL(Torc_Application__r.Preferred_Rate__c ))),Torc_Application__r.Preferred_Rate__c, 

IF(AND(Torc_Application__r.Torc_User__r.ratePerHour__c&lt;&gt;0,NOT(ISNULL(Torc_Application__r.Torc_User__r.ratePerHour__c))),Torc_Application__r.Torc_User__r.ratePerHour__c ,0))

,

Torc_User_Ref__r.ratePerHour__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Rate of the match</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>