force-app/main/default/objects/Torc_Match__c/fields/MoreInfo_At__c.field-meta.xml
<CustomField>
    <fullName>MoreInfo_At__c</fullName>
    <label>MoreInfo At</label>
    <type>DateTime</type>
</CustomField>