force-app/main/default/objects/Torc_Match__c/fields/Negative_Full_Margin__c.field-meta.xml
<CustomField>
    <fullName>Negative_Full_Margin__c</fullName>
    <formula>IF( AND(Estimated_Margin__c &gt;=-0.33,Estimated_Margin__c &lt;-0.16,NOT(ISNULL(Estimated_Margin__c))) ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>-33% margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>