force-app/main/default/objects/Torc_Match__c/fields/Negative_Half_margin__c.field-meta.xml
<CustomField>
    <fullName>Negative_Half_margin__c</fullName>
    <formula>IF( AND(Estimated_Margin__c &gt;=-0.16,Estimated_Margin__c &lt;0,NOT(ISNULL(Estimated_Margin__c))) ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>-16% margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>