force-app/main/default/objects/Torc_Match__c/fields/organization__c.field-meta.xml
<CustomField>
    <fullName>organization__c</fullName>
    <formula>Torc_Job_Opportunity__r.organization__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>organization</label>
    <type>Text</type>
</CustomField>