force-app/main/default/objects/Torc_Match__c/fields/Previous_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Previous_Feedback__c</fullName>
    <formula>HYPERLINK(
&apos;https://torc.lightning.force.com/lightning/r/Report/00OUP0000017GCL2A2/view?fv0=&apos;+ Torc_User__c ,&apos;Past Feedback&apos;

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Feedback</label>
    <type>Text</type>
</CustomField>