force-app/main/default/objects/Torc_Match__c/fields/rate__c.field-meta.xml
<CustomField>
    <fullName>rate__c</fullName>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>