force-app/main/default/objects/Torc_Match__c/fields/reasonForRejection__c.field-meta.xml
<CustomField>
    <fullName>reasonForRejection__c</fullName>
    <label>Reason For Rejection</label>
    <type>TextArea</type>
</CustomField>