force-app/main/default/objects/Torc_Match__c/fields/Rejected_At__c.field-meta.xml
<CustomField>
    <fullName>Rejected_At__c</fullName>
    <label>Rejected At</label>
    <type>DateTime</type>
</CustomField>