force-app/main/default/objects/Torc_Match__c/fields/Send_Questionnaire_check__c.field-meta.xml
<CustomField>
    <fullName>Send_Questionnaire_check__c</fullName>
    <formula>Torc_User_Ref__r.countryName__c =&apos;United States&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Questionnaire check</label>
    <type>Checkbox</type>
</CustomField>