force-app/main/default/objects/Torc_Match__c/fields/sfdcRejected__c.field-meta.xml
<CustomField>
    <fullName>sfdcRejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>sfdcRejected</label>
    <type>Checkbox</type>
</CustomField>