force-app/main/default/objects/Torc_Match__c/fields/sfdcRejectionReason__c.field-meta.xml
<CustomField>
    <fullName>sfdcRejectionReason__c</fullName>
    <label>sfdcRejectionReason</label>
    <length>80</length>
    <type>Text</type>
</CustomField>