force-app/main/default/objects/Torc_Match__c/fields/sfdcRejectionRoot__c.field-meta.xml
<CustomField>
    <fullName>sfdcRejectionRoot__c</fullName>
    <label>sfdcRejectionRoot</label>
    <length>80</length>
    <type>Text</type>
</CustomField>