force-app/main/default/objects/Torc_Match__c/fields/sfdcStatus__c.field-meta.xml
<CustomField>
    <fullName>sfdcStatus__c</fullName>
    <label>sfdcStatus</label>
    <length>80</length>
    <type>Text</type>
</CustomField>