force-app/main/default/objects/Torc_Match__c/fields/Shortlisted_At__c.field-meta.xml
<CustomField>
    <fullName>Shortlisted_At__c</fullName>
    <label>Shortlisted At</label>
    <type>DateTime</type>
</CustomField>