force-app/main/default/objects/Torc_Match__c/fields/Show_Client_Accept_Reject_Stage__c.field-meta.xml
<CustomField>
    <fullName>Show_Client_Accept_Reject_Stage__c</fullName>
    <formula>OR(
status__c = &apos;ACCEPTED&apos;,
status__c = &apos;REJECTEDBYCUSTOMER&apos;,
status__c = &apos;REJECTEDBYMATCHER&apos;,
status__c = &apos;REJECTEDBYMEMBER&apos;,
status__c = &apos;SKIPPED&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Client Accept Reject Stage</label>
    <type>Checkbox</type>
</CustomField>