force-app/main/default/objects/Torc_Match__c/fields/Skipped_At__c.field-meta.xml
<CustomField>
    <fullName>Skipped_At__c</fullName>
    <label>Skipped At</label>
    <type>DateTime</type>
</CustomField>