force-app/main/default/objects/Torc_Match__c/fields/subStatus__c.field-meta.xml
<CustomField>
    <fullName>subStatus__c</fullName>
    <label>subStatus</label>
    <length>80</length>
    <type>Text</type>
</CustomField>