force-app/main/default/objects/Torc_Match__c/fields/Sync_Request_Time__c.field-meta.xml
<CustomField>
    <fullName>Sync_Request_Time__c</fullName>
    <label>Sync Request Time</label>
    <type>DateTime</type>
</CustomField>