force-app/main/default/objects/Torc_Match__c/fields/talent_referrer_s_Cohort__c.field-meta.xml
<CustomField>
    <fullName>talent_referrer_s_Cohort__c</fullName>
    <formula>Torc_User_Ref__r.Referrer_s_Cohort__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>talent referrer&apos;s Cohort</label>
    <type>Text</type>
</CustomField>