force-app/main/default/objects/Torc_Match__c/fields/Torc_Application__c.field-meta.xml
<CustomField>
    <fullName>Torc_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Torc Application</label>
    <referenceTo>Torc_Application__c</referenceTo>
    <relationshipLabel>Torc Matchs</relationshipLabel>
    <relationshipName>Torc_Matchs</relationshipName>
    <type>Lookup</type>
</CustomField>