force-app/main/default/objects/Torc_Match__c/fields/Torc_Job_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Torc_Job_Opportunity__c</fullName>
    <label>Torc Job Opportunity</label>
    <referenceTo>Torc_Job_Opportunity__c</referenceTo>
    <relationshipLabel>Torc Matches</relationshipLabel>
    <relationshipName>Torc_Matchs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>