force-app/main/default/objects/Torc_Match__c/fields/Torc_User__c.field-meta.xml
<CustomField>
    <fullName>Torc_User__c</fullName>
    <formula>IF(Torc_Application__c&lt;&gt;NULL, Torc_Application__r.Torc_User__r.Name, Torc_User_Ref__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Torc User</label>
    <type>Text</type>
</CustomField>