force-app/main/default/objects/Torc_Match__c/fields/Torc_User_Country__c.field-meta.xml
<CustomField>
    <fullName>Torc_User_Country__c</fullName>
    <formula>IF(Torc_Application__c&lt;&gt;NULL, Torc_Application__r.Torc_User__r.countryName__c, Torc_User_Ref__r.countryName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Torc User Country</label>
    <type>Text</type>
</CustomField>