force-app/main/default/objects/Torc_Match__c/fields/Torc_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Torc_User_Email__c</fullName>
    <formula>Torc_User_Ref__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Torc User Email</label>
    <type>Text</type>
</CustomField>