force-app/main/default/objects/Torc_Match__c/fields/Torc_User_Ref__c.field-meta.xml
<CustomField>
    <fullName>Torc_User_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Torc User Ref</label>
    <referenceTo>Torc_User__c</referenceTo>
    <relationshipLabel>Torc Matches</relationshipLabel>
    <relationshipName>Torc_Matches</relationshipName>
    <type>Lookup</type>
</CustomField>