force-app/main/default/objects/Torc_Match__c/fields/Torc_User_SFDC_ID__c.field-meta.xml
<CustomField>
    <fullName>Torc_User_SFDC_ID__c</fullName>
    <formula>IF( Torc_Application__c &lt;&gt;NULL, Torc_Application__r.Torc_User__r.Id , Torc_User_Ref__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Torc User SFDC ID</label>
    <type>Text</type>
</CustomField>