force-app/main/default/objects/Torc_Match__c/fields/User_Created_At__c.field-meta.xml
<CustomField>
    <fullName>User_Created_At__c</fullName>
    <formula>IF(Torc_Application__c&lt;&gt;NULL, Torc_Application__r.Torc_User__r.createdAt__c, Torc_User_Ref__r.createdAt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Created At</label>
    <type>DateTime</type>
</CustomField>