force-app/main/default/objects/Torc_Match__c/fields/User_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Full_Name__c</fullName>
    <formula>IF(Torc_Application__c&lt;&gt;NULL, Torc_Application__r.Torc_User__r.Full_Name__c, Torc_User_Ref__r.Full_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Full Name</label>
    <type>Text</type>
</CustomField>