force-app/main/default/objects/Torc_Match__c/fields/userid__c.field-meta.xml
<CustomField>
    <fullName>userid__c</fullName>
    <label>userid</label>
    <length>80</length>
    <type>Text</type>
</CustomField>