force-app/main/default/objects/Torc_Match__c/fields/Vetted__c.field-meta.xml
<CustomField>
    <fullName>Vetted__c</fullName>
    <formula>IF(Torc_Application__c&lt;&gt;NULL, Torc_Application__r.Torc_User__r.Vetted__c, Torc_User_Ref__r.Vetted__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vetted?</label>
    <type>Checkbox</type>
</CustomField>