force-app/main/default/objects/Torc_Match__c/fields/Worse_than_33_margin__c.field-meta.xml
<CustomField>
    <fullName>Worse_than_33_margin__c</fullName>
    <formula>IF(AND(Estimated_Margin__c &lt; -0.33,NOT(ISNULL(Estimated_Margin__c))) ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worse than -33% margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>