force-app/main/default/objects/Torc_Match__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>applicationId__c</columns>
    <columns>External_Id__c</columns>
    <columns>jobOpportunityId__c</columns>
    <columns>status__c</columns>
    <columns>Torc_Application__c</columns>
    <columns>owner__c</columns>
    <columns>createdAt__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>